# spiral

./: .gitignore  README.md  pyproject.toml
spiral/: __init__.py  bash_cmds.sh  bash_frank.py  chi2_SA.py  chi2_functions.py  chi2_info.py  chi2_mp.py  chi2_scale.py  fit_diagnose.py  flux_look.py  geo.py  module1.py  png_arrange.py  pretties.ipynb  pretties.py  set_chi2_info.py  set_chi2_mp.py  signal_functions.py  signal_spaces.py  test_of_speed.py  utils.py  vis_functions.py  yyynum_uv_pts.py  z1.py  z_z.py  zzz.py
spiral/fargo/: fargo_lib.py  spirals.py
spiral/params/: BP_Tau_parameters.json  CIDA_9_parameters.json  DO_Tau_parameters.json  DR_Tau_parameters.json  FT_Tau_parameters.json  MWC_480_parameters.json  RY_Tau_parameters.json  UZ_Tau_parameters.json  model_parameters.json  off_model_parameters.json
