[tool.poetry]
name = "spiral"
version = "0.1.0"
description = "package for fitting simulations of planet-driven dust spirals to observations in visibility space"
authors = ["Ed Stevenson <edward.stevenson100@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
